syntax = "proto3";

package auth;

option go_package = "./proto";

service Auth {
  rpc LoginApple(LoginAppleRequest) returns (LoginAppleResponse) {}
  rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
  rpc PingPong(stream Ping) returns (stream Pong) {}
}

message LoginAppleRequest {
  string token = 1;
}

message LoginAppleResponse {
  string token = 1;
}

message StreamingRequest {
  int64 count = 1;
}

message StreamingResponse {
  int64 count = 1;
}

message Ping {
  int64 stroke = 1;
}

message Pong {
  int64 stroke = 1;
}
